--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,10 +28,10 @@
                             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="{{ 'path(app_user_form)' }}">Ajout</a>
+                            <a class="nav-link" href="{{ path('app_user_form') }}">Ajout</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">List</a>
+                            <a class="nav-link" href="{{ path('app_user_list') }}">List</a>
                         </li>
                     </ul>
                 </div>
