--- a/templates/user/form.html.twig
+++ b/templates/user/form.html.twig
@@ -5,5 +5,6 @@
 {{ form_start(form) }}
 
     {{ form_row(form.certificats) }}
+    <button class="btn btn-primary">Envoie</button>
 
 {{ form_end(form) }}
