--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,8 +1,10 @@
-{% include "base.html.twig" %}
+{% extends "base.html.twig" %}
 
-<div class="jumbotron">
-  <h1 class="display-4">Bienvenue!</h1>
-  <p class="lead">Dans les Certificats.</p>
-  <hr class="my-4">
-  <p>Vous pouvez ajouter un Certificats ou voir les Certificats.</p>
-</div>
+{% block body %}
+  <div class="jumbotron">
+    <h1 class="display-4">Bienvenue!</h1>
+    <p class="lead">Dans les Certificats.</p>
+    <hr class="my-4">
+    <p>Vous pouvez ajouter un Certificats ou voir les Certificats.</p>
+  </div>
+{% endblock %}
