--- a/templates/user/form.html.twig
+++ b/templates/user/form.html.twig
@@ -1,10 +1,12 @@
-{% include "base.html.twig" %}
+{% extends "base.html.twig" %}
 
-<h1>Ajout un certiticats</h1>
+{% block body %}
+    <h1>Ajout un certiticats</h1>
 
-{{ form_start(form) }}
+    {{ form_start(form) }}
 
-    {{ form_row(form.certificats) }}
-    <button class="btn btn-primary">Envoie</button>
+        {{ form_row(form.certificats) }}
+        <button class="btn btn-primary">Envoie</button>
 
-{{ form_end(form) }}
+    {{ form_end(form) }}
+{% endblock %}
