--- a/templates/user/form.html.twig
+++ b/templates/user/form.html.twig
@@ -14,3 +14,5 @@
         <h1 class="text-center">Vous devez vous connecter pour pouvoir ajouter un certificats</h1>
     {% endif %}
 {% endblock %}
+
+{#Mot de passe pour Dupont Marcel : Fr13!#}
