--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -1,8 +1,9 @@
 {% extends "base.html.twig." %}
 
-{#Mot de passe pour Dupont Marcel : Fr13!#}
-
 {% block body %}
+    {{ form_start(searchForm) }}
+    {{ form_end(searchForm) }}
+
     <table class="table table-bordered">
         <thead class="thead-dark text-center">
             <tr>
@@ -37,8 +38,4 @@
             {% endfor %}
         </tbody>
     </table>
-
-    <br>
-
-    <h1 class="text-center">{{ today|date("d/m/Y H:i:s", "Europe/Paris") }}</h1>
 {% endblock %}
